app/scss/components/_hero.scss
@use "../util/functions" as *;

.hero {
  background-color: var(--color-hero-bg);
  background-image: url("/img/hero-wave.svg");
  background-repeat: no-repeat;
  background-position: center calc(100% + 5px);
  background-size: 1440px auto;
  color: var(--color-text-light);

  @media (width >= rem(1000)) {
    background-position: -5px calc(100% + 5px);
    background-size: calc(100% + 10px) auto;
  }

  &__wrapper {
    //display: flow-root;//creează un context de tip bloc pentru wrapper astfel încât marginea imaginii nu mai impinge in navbar
    //daca folosim margin-block (top si bottom) in image
    display: grid;
    padding-block: 30px 120px;

    @media (width >= rem(1000)) {
      grid-template-columns: 6fr 5fr;
      padding-block: 80px 0;
    }
  }

  &__image {
    width: clamp(12.5rem, 1.888rem + 45vw, 30.1875rem);
    margin-block-end: 40px;
    justify-self: center;

    @media (width >= rem(1000)) {
      order: 1;
      margin-block-end: 0;
      justify-self: end;
    }
  }

  &__text {
  }

  &__title {
    margin-block-end: 12px;

    @media (width >= rem(600)) {
      margin-block-end: 20px;
    }
  }

  &__content {
    margin-block-end: 40px;
    max-width: 50ch;
  }

  &__buttons {
    display: flex;
    gap: 20px;
  }
}

